// Copyright (C) 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package gles_pb;

// ErrorState is a command extra used to describe the GLES error state after
// the command has been executed. It is optional - we use it only for testing.
message ErrorState {
	uint32 TraceDriversGlError = 1;
	uint32 InterceptorsGlError = 2;
}

message EGLImageData {
  bytes  ID     = 1; // Resource ID of the image data
  sint32 Size   = 2;
  sint32 Width  = 3;
  sint32 Height = 4;
  sint32 Format = 5; // GLenum
  sint32 Type   = 6; // GLenum
}

